Fixing up after now => visible transition, adding images

--- a/templates/default/css/articlelist.css
+++ b/templates/default/css/articlelist.css
@@ -27,8 +27,8 @@ table.listtable tr td.mode {
     background-position: left center;
 }
 
-table.listtable tr td.mode.now {
-    background-image: url('../images/modes/now.png');
+table.listtable tr td.mode.visible {
+    background-image: url('../images/modes/visible.png');
 }
 
 table.listtable tr td.mode.released {
